crux-mir/test/symb_eval/crypto/bytes.good
test bytes/3a1fbbbh::f[0]: FAILED

failures:

---- bytes/3a1fbbbh::f[0] counterexamples ----
Failure for ./lib/crucible/lib.rs:37:41: 37:58 !test/symb_eval/crypto/bytes.rs:85:7: 85:38: error: in bytes/3a1fbbbh::f[0]
MIR assertion at test/symb_eval/crypto/bytes.rs:85:7:
	a[i] == b[i]
Failure for ./lib/crucible/lib.rs:37:41: 37:58 !test/symb_eval/crypto/bytes.rs:85:7: 85:38: error: in bytes/3a1fbbbh::f[0]
MIR assertion at test/symb_eval/crypto/bytes.rs:85:7:
	a[i] == b[i]
Failure for ./lib/crucible/lib.rs:37:41: 37:58 !test/symb_eval/crypto/bytes.rs:85:7: 85:38: error: in bytes/3a1fbbbh::f[0]
MIR assertion at test/symb_eval/crypto/bytes.rs:85:7:
	a[i] == b[i]
Failure for ./lib/crucible/lib.rs:37:41: 37:58 !test/symb_eval/crypto/bytes.rs:85:7: 85:38: error: in bytes/3a1fbbbh::f[0]
MIR assertion at test/symb_eval/crypto/bytes.rs:85:7:
	a[i] == b[i]
Failure for ./lib/crucible/lib.rs:37:41: 37:58 !test/symb_eval/crypto/bytes.rs:85:7: 85:38: error: in bytes/3a1fbbbh::f[0]
MIR assertion at test/symb_eval/crypto/bytes.rs:85:7:
	a[i] == b[i]

[Crux] Overall status: Invalid.
